--- a/rss_morning/templates/email.txt.j2
+++ b/rss_morning/templates/email.txt.j2
@@ -21,6 +21,7 @@ No relevant articles identified.
 {% for article in articles -%}
 Title: {{ article.get("title") or article.get("url") or "Untitled Article" }}
 {% if article.get("summary") %}Summary: {{ article.get("summary") }}{% endif -%}
+{% if article.get("image") %}Image: {{ article.get("image") }}{% endif -%}
 {% if article.get("text") %}Excerpt: {{ article.get("text") }}{% endif -%}
 {% if article.get("url") %}Link: {{ article.get("url") }}{% endif -%}
 
